diseño responsivo para celular

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Aplicacion cronometro hecho con html css y js">
     <title>Cronometro</title>
 </head>
 
 <body>
-
     <div class="c-body">
         <div class="c-time">
             <div class="screen">
@@ -23,7 +23,6 @@
             </div>
         </div>
     </div>
-
     <script src="time.js"></script>
 </body>
 
